Fixed Embedded baclkings sticky "nav header" horizontal alignment breaking when the note is in the sidebar

--- a/src/scss/Plugins/Core/outgoingLinkBacklinks.scss
+++ b/src/scss/Plugins/Core/outgoingLinkBacklinks.scss
@@ -47,9 +47,17 @@
 	color: var(--nav-item-color-hover);
 }
 
-:is(.pt-nav-header-left-sidebar-align-center .workspace-split.mod-left-split, .pt-nav-header-right-sidebar-align-center .workspace-split.mod-right-split) .embedded-backlinks .nav-header {
-	position: sticky;
-	top: 0;
+.pt-nav-header-left-sidebar-align-center .workspace-split.mod-left-split,
+.pt-nav-header-right-sidebar-align-center .workspace-split.mod-right-split,
+.pt-nav-header-left-sidebar-align-left .workspace-split.mod-left-split,
+.pt-nav-header-left-sidebar-align-right .workspace-split.mod-left-split,
+.pt-nav-header-right-sidebar-align-left .workspace-split.mod-right-split,
+.pt-nav-header-right-sidebar-align-right .workspace-split.mod-right-split {
+	.embedded-backlinks .nav-header {
+		position: sticky;
+		top: 0;
+		padding: 0 var(--size-2-2);
+	}
 }
 
 .embedded-backlinks {
